--- a/assets/stylesheets/application.sass
+++ b/assets/stylesheets/application.sass
@@ -4,6 +4,7 @@
  */
 
 @import "bootstrap-sass"
-@import "bootswatch-sass/cerulean/_variables"
-@import "bootswatch-sass/cerulean/_bootswatch"
+@import "bootswatch-sass/simplex/_variables"
+@import "bootswatch-sass/simplex/_bootswatch"
+@import "overrides"
 
