--- a/views/layout.slim
+++ b/views/layout.slim
@@ -2,9 +2,14 @@ doctype html
 html
   head
     meta charset="utf-8"
-    title SinatraApp
+    title Unicorn
     == stylesheet_tag 'application'
-    == javascript_tag 'application'
   body
-    == yield
+    .navbar.navbar-default
+      .container
+        .navbar-header
+          a.navbar-brand href="#" Unicorn
+    .container
+      == yield
+    == javascript_tag 'application'
 
