完全勝利出来るように

--- a/views/index.slim
+++ b/views/index.slim
@@ -17,6 +17,7 @@
             button.select-btn.btn-info#lose disabled="disabled" 完全敗北
 
         audio#before src="/assets/audios/before.mp3"
+        audio#win src="/assets/audios/win.mp3"
         audio preload="metadata"
           source src="/assets/audios/before.mp3" type="audio/mp3"
           source src="/assets/audios/win.mp3" type="audio/mp3"
