--- a/views/index.slim
+++ b/views/index.slim
@@ -18,6 +18,7 @@
 
         audio#before src="/assets/audios/before.mp3"
         audio#win src="/assets/audios/win.mp3"
+        audio#lose src="/assets/audios/lose.mp3"
         audio preload="metadata"
           source src="/assets/audios/before.mp3" type="audio/mp3"
           source src="/assets/audios/win.mp3" type="audio/mp3"
