audioファイルの置き場を変更

--- a/views/index.slim
+++ b/views/index.slim
@@ -1,9 +1,9 @@
 audio#before preload="auto"
-  source src="/assets/audios/before.mp3" type="audio/mp3"
+  source src="/audios/before.mp3" type="audio/mp3"
 audio#win preload="auto"
-  source src="/assets/audios/win.mp3" type="audio/mp3"
+  source src="/audios/win.mp3" type="audio/mp3"
 audio#lose preload="auto"
-  source src="/assets/audios/lose.mp3" type="audio/mp3"
+  source src="/audios/lose.mp3" type="audio/mp3"
 
 .center
   button.btn.btn-success#start data-toggle="modal" data-target="#myModal"
