mp3をロードするタイミングをずらす

--- a/views/index.slim
+++ b/views/index.slim
@@ -1,9 +1,13 @@
-audio#before preload="auto"
-  source src="/audios/before.mp3" type="audio/mp3"
-audio#win preload="auto"
-  source src="/audios/win.mp3" type="audio/mp3"
-audio#lose preload="auto"
-  source src="/audios/lose.mp3" type="audio/mp3"
+/ audio#before preload="auto"
+/   source src="/audios/before.mp3" type="audio/mp3"
+/ audio#win preload="auto"
+/   source src="/audios/win.mp3" type="audio/mp3"
+/ audio#lose preload="auto"
+/   source src="/audios/lose.mp3" type="audio/mp3"
+
+audio#before
+audio#win
+audio#lose
 
 .center
   button.btn.btn-success#start data-toggle="modal" data-target="#myModal"
