--- a/views/index.slim
+++ b/views/index.slim
@@ -1,10 +1,3 @@
-/ audio#before preload="auto"
-/   source src="/audios/before.mp3" type="audio/mp3"
-/ audio#win preload="auto"
-/   source src="/audios/win.mp3" type="audio/mp3"
-/ audio#lose preload="auto"
-/   source src="/audios/lose.mp3" type="audio/mp3"
-
 audio#before
 audio#win
 audio#lose
@@ -21,6 +14,9 @@ audio#lose
           span aria-hidden="true" &times;
       .modal-body.center
         .row
+          .col-xs-12
+            img.exhide#img_win1 width="360" height="270" src="/assets/win1.jpg"
+        .row.buttons
           .col-xs-offset-2.col-xs-4
             button.select-btn.btn-primary#win disabled="disabled" 完全勝利
           .col-xs-4
