アセットへのパスはimage_pathを使う

--- a/views/index.slim
+++ b/views/index.slim
@@ -15,8 +15,8 @@ audio#lose
       .modal-body.center
         .row
           .col-xs-12
-            img.exhide#img_win1 width="360" height="270" src="/assets/win1.jpg"
-            img.exhide#img_lose1 width="360" height="270" src="/assets/lose1.jpg"
+            img.exhide#img_win1 width="360" height="270" src="#{image_path 'win1.jpg'}"
+            img.exhide#img_lose1 width="360" height="270" src="#{image_path 'lose1.jpg'}"
         .row.buttons
           .col-xs-offset-2.col-xs-4
             button.select-btn.btn-primary#win disabled="disabled" 完全勝利
