--- a/assets/stylesheets/main.sass
+++ b/assets/stylesheets/main.sass
@@ -1,3 +1,14 @@
 .center
   text-align: center
 
+.image
+  width: 360px
+  height: 270px
+  background-repeat: no-repeat
+  margin-left: auto
+  margin-right: auto
+  &.img_win1
+    background-image: image-url('win1.jpg')
+  &.img_lose1
+    background-image: image-url('lose1.jpg')
+
