--- a/views/index.slim
+++ b/views/index.slim
@@ -7,7 +7,12 @@ audio#lose
     | 俺は…、行くよ。
 
 .modal.fade#myModal tabindex="-1" role="dialog"
-  .modal-dialog
+  - modal_dialog_class = "modal-dialog"
+  - if @ua.mobile?
+    - modal_dialog_class += " modal-vertical-middle-mobile"
+  - else
+    - modal_dialog_class += " modal-vertical-middle-pc"
+  div class="#{modal_dialog_class}"
     .modal-content
       .modal-header
         button.close type="button" data-dismiss="modal" aria-label="Close"
