フッターを付ける

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -13,4 +13,8 @@ html
     .container
       == yield
     == javascript_tag 'application'
+    footer
+      .container
+        hr
+        p Copyright &copy; 2015 gembaf All Rights Reserved.
 
