--- a/assets/stylesheets/main.sass
+++ b/assets/stylesheets/main.sass
@@ -2,11 +2,9 @@
   text-align: center
 
 .image
-  width: 360px
+  max-width: 100%
   height: 270px
-  background-repeat: no-repeat
-  margin-left: auto
-  margin-right: auto
+  background: no-repeat center center
   &.img_win1
     background-image: image-url('win1.jpg')
   &.img_lose1
